<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F32121"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#050505"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/logo_desc"
            app:srcCompat="@drawable/dicee_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/left_dice"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/Dice_Roll"
                    app:srcCompat="@drawable/dice3" />

                <ImageView
                    android:id="@+id/Right_dice"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/Dice_Roll"
                    app:srcCompat="@drawable/dice5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/User_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#CDDC39"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:paddingLeft="40dp"
                    android:paddingTop="20dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtu"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/Computer_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:background="#CDDC39"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingTop="20dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/txtc"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/btn_roll"
                android:text="@string/btn1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/btn_roll"
                android:text="@string/btn2"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Result"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center|left"
                android:layout_weight="1"
                android:contentDescription="@string/Textv"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/Textv"
                android:textColor="#FBF7F6"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/emoji"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/resultemo"
                app:srcCompat="@drawable/ques" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>